--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,13 +1,3 @@
-name: Backend CI
-
-on:
-  push:
-    paths:
-      - 'backend/**'
-  pull_request:
-    paths:
-      - 'backend/**'
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,4 +18,4 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -Dspring.profiles.active=test
