--- a/backend/studentPantry/src/test/resources/application.properties
+++ b/backend/studentPantry/src/test/resources/application.properties
@@ -1,6 +1,4 @@
-# Disable database connections for unit tests
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=
-spring.jpa.database-platform=
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
