--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,3 +1,13 @@
+name: Backend CI
+
+on:
+  push:
+    paths:
+      - 'backend/**'
+  pull_request:
+    paths:
+      - 'backend/**'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,6 +26,5 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           cache: 'maven'
-
       - name: Build with Maven
         run: mvn clean install -Dspring.profiles.active=test
