--- a/backend/studentPantry/src/test/resources/application.properties
+++ b/backend/studentPantry/src/test/resources/application.properties
@@ -2,3 +2,10 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+#email functionality
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=khanolkararati1@gmail.com
+spring.mail.password=romznqindplhxurb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
