--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,4 +1,4 @@
-name: Frontend CI
+name: Angular CI
 
 on:
   push:
@@ -14,24 +14,24 @@ jobs:
 
     defaults:
       run:
-        working-directory: frontend
+        working-directory: frontend/pantry-pal-frontend-app
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/frontend/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-modules-
-
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+
+      - name: Cache npm dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('frontend/pantry-pal-frontend-app/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
 
       - name: Install dependencies
         run: npm install
