--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -20,11 +20,37 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
-          cache: 'maven'
-      - name: Build with Maven
-        run: mvn clean install -Dspring.profiles.active=test
+
+      - name: Build and Test with Maven
+        run: mvn clean test -Dspring.profiles.active=test
+
+      - name: Upload Surefire Test Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: backend/studentPantry/surefire-reports/*.html
+
+      - name: Send Test Report via Email
+        uses: dawidd6/action-send-mail@v3
+        with:
+          smtp-server: smtp.gmail.com
+          smtp-port: 587
+          smtp-username: ${{ secrets.GMAIL_USERNAME }}
+          smtp-password: ${{ secrets.GMAIL_APP_PASSWORD }}
+          to: recipient@example.com
+          subject: "Test Report"
+          body: "Please find the attached test report."
+          attachments: backend/studentPantry/target/surefire-reports/*.html
