--- a/backend/studentPantry/pom.xml
+++ b/backend/studentPantry/pom.xml
@@ -127,7 +127,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
-	</build>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>2.22.0</version>
+      <configuration>
+        <reportFormat>html</reportFormat> <!-- Or 'xml' or 'html' -->
+		<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+      </configuration>
+    </plugin>
+
+    </plugins>
+</build>
 
 </project>
