--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -38,7 +38,7 @@ jobs:
         run: mvn clean test -Dspring.profiles.active=test
 
       - name: Upload Surefire Test Report
-        uses: actions/upload-artifact@4
+        uses: actions/upload-artifact@v4
         with:
           name: test-report
           path: backend/studentPantry/surefire-reports/*.html
