--- a/backend/studentPantry/pom.xml
+++ b/backend/studentPantry/pom.xml
@@ -127,16 +127,26 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-    <plugin>
+   <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
       <version>2.22.0</version>
-      <configuration>
-        <reportFormat>html</reportFormat> <!-- Or 'xml' or 'html' -->
-		<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-      </configuration>
     </plugin>
 
+    <!-- Generates HTML test reports -->
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-report-plugin</artifactId>
+      <version>3.0.0-M7</version>
+      <executions>
+        <execution>
+          <phase>verify</phase>
+          <goals>
+            <goal>report-only</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
     </plugins>
 </build>
 
