Add Lighthouse as a devDependency

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -51,3 +51,16 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage/*.json  
+
+      - name: Run Lighthouse Accessibility Audit
+        run: |
+          npx lighthouse http://localhost:4200 \
+          --only-categories=accessibility \
+          --output=html \
+          --output-path=frontend/pantry-pal-frontend-app/src/tests/reports/accessibility-report.html
+
+      - name: Upload Lighthouse Report as Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: lighthouse-report
+          path: frontend/pantry-pal-frontend-app/src/app/tests/reports/accessibility-report.html
