--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -52,10 +52,15 @@ jobs:
         with:
           file: ./coverage/*.json  
 
+      - name: Test File Write
+        run: echo "test" > frontend/pantry-pal-frontend-app/src/tests/reports/test-file.txt
+
+
       - name: Run Lighthouse Accessibility Audit
         run: |
           npx lighthouse http://localhost:4200 \
           --only-categories=accessibility \
           --output=html \
-          --output-path=frontend/pantry-pal-frontend-app/src/tests/reports/accessibility-report.html
+          --output-path=./accessibility-report.html
+
 
