--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -51,14 +51,9 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage/*.json  
-
-      - name: Run Lighthouse Accessibility Audit
+      
+      - name: run Lighthouse CI
         run: |
-          npx lighthouse http://localhost:4200 \
-          --only-categories=accessibility \
-          --output=html \
-          --output-path=./lighthouse-report.html \
-          --chrome-flags="--headless --no-sandbox"
-
-
+          npm install -g @lhci/cli
+          lhci autorun
 
