--- a/frontend/pantry-pal-frontend-app/.lighthouserc.json
+++ b/frontend/pantry-pal-frontend-app/.lighthouserc.json
@@ -1,7 +1,7 @@
 {
     "ci": {
       "collect": {
-        "staticDistDir": "./dist/pantry-pal-frontend-app"
+        "staticDistDir": "./dist/PantryPal"
       },
       "upload": {
         "target": "temporary-public-storage"
