test lighthouse ci token

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -56,4 +56,5 @@ jobs:
         run: |
           npm install -g @lhci/cli
           lhci autorun
-
+        env: 
+          LHCI_GITHUB_APP_TOKEN: ${{secrets.LIGHTHOUSE_APP_TOKEN}}
