--- a/frontend/pantry-pal-frontend-app/package.json
+++ b/frontend/pantry-pal-frontend-app/package.json
@@ -36,6 +36,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "lighthouse": "^12.4.0",
+    "selenium-webdriver": "^4.30.0",
     "typescript": "~4.9.4"
   }
 }
