--- a/backend/studentPantry/pom.xml
+++ b/backend/studentPantry/pom.xml
@@ -4,16 +4,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		 <groupId>com.student.pantry</groupId>
+    <artifactId>studentPantry</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+	<relativePath>../../pom.xml</relativePath> <!-- Relative to parent pom.xml -->
+
 	</parent>
-	<groupId>com.student.pantry</groupId>
-	<artifactId>studentPantry</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>studentPantryManagement</name>
-	<description>Student Pantry Management</description>
+
+	<artifactId>backend</artifactId>
+	<name>Backend Module</name>
+		<packaging>jar</packaging>
+
+
 
 	<properties>
 		<java.version>11</java.version>
@@ -29,13 +31,6 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.9.2</version>
 		</dependency>
-
-		<dependency>
-			<groupId>com.h2database</groupId>
-				<artifactId>h2</artifactId>
-				<scope>test</scope>  <!-- Ensure this is only for test scope -->
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -50,6 +45,11 @@
 			<version>2.0.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+				<artifactId>h2</artifactId>
+				<scope>test</scope>  <!-- Ensure this is only for test scope -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -83,14 +83,6 @@
 			<artifactId>json-path</artifactId>
 		</dependency>
 
-			<!-- Other dependencies -->
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-test</artifactId>
-				<scope>test</scope>
-			</dependency>
-		
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
@@ -107,21 +99,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
-		<dependency>
-    	<groupId>org.springframework.boot</groupId>
-    	<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
 
 		<dependency>
    		 <groupId>org.apache.httpcomponents</groupId>
     		<artifactId>httpclient</artifactId>
     		<version>4.5.13</version>
 		</dependency>
-
 
 	</dependencies>
 
@@ -130,8 +113,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.3.3.RELEASE</version> <!-- ✅ Version added -->
+
+				<configuration>
+                <mainClass>com.student.pantry.studentPantry.StudentPantryManagementApplication</mainClass>
+            </configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
